--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -12,4 +12,5 @@ jobs:
         sudo apt install -y snapd snapcraft
         snapcraft
         sudo snap install --dangerous hello_0.1_amd64.snap
+        mono stage/usr/lib/hello/hello-world.exe
         snap run hello
