--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,6 +14,7 @@ confinement: strict
 apps:
   hello:
     command: sh $SNAP/usr/bin/mono-wrapper $SNAP/usr/bin/mono $SNAP/usr/lib/hello/hello-world.exe
+    plugs: [network]
 
 parts:
   hello:
