--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -9,6 +9,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build and test snap
       run: |
+        sudo apt install -y fsharp
+        git submodule update --init
+        ./downgradeMono.fsx
         sudo apt install -y snapd snapcraft
         snapcraft
         sudo snap install --dangerous hello_0.1_amd64.snap
