--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -13,6 +13,8 @@ jobs:
         git submodule update --init
         ./downgradeMono.fsx
         sudo apt install -y snapd snapcraft
+        snap --version
+        snapcraft --version
         snapcraft
         sudo snap install --dangerous hello_0.1_amd64.snap
         mono stage/usr/lib/hello/hello-world.exe
