--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -12,7 +12,8 @@ jobs:
         sudo apt install -y fsharp
         git submodule update --init
         ./downgradeMono.fsx
-        sudo apt install -y snapd snapcraft
+        sudo apt install -y snapd
+        sudo snap install --classic snapcraft
         snap --version
         snapcraft --version
         snapcraft
