--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -12,8 +12,13 @@ jobs:
         sudo apt install -y fsharp
         git submodule update --init
         ./downgradeMono.fsx
+
         sudo apt install -y snapd
         sudo snap install --classic snapcraft
+
+        # workaround for latest version of snapcraft to work on GithubActions/AzureDevOps
+        sudo chown root:root /
+
         snap --version
         snapcraft --version
         snapcraft
