--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -17,7 +17,7 @@ layout:
 
 apps:
   hello:
-    command: sh $SNAP/usr/bin/mono-wrapper $SNAP/usr/bin/mono $SNAP/usr/lib/hello/hello-world.exe
+    command: sh $SNAP/usr/bin/mono-wrapper $SNAP/usr/bin/mono --trace $SNAP/usr/lib/hello/hello-world.exe
     plugs: [network]
 
 parts:
