Setup proper hooks for Mono cert store
This is the key to understand this problem:
https://github.com/mono/mono/blob/mono-4.6.2.7/mcs/class/Mono.Security/Mono.Security.X509/X509StoreManager.cs#L72

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,6 +14,8 @@ confinement: strict
 layout:
   /etc/ssl/certs:
     bind: $SNAP/etc/ssl/certs
+  /usr/share/.mono:
+    symlink: $SNAP/etc/mono/certstore
 
 apps:
   hello:
@@ -34,6 +36,12 @@ parts:
       - mono-devel
     plugin: make
     source: .
+
+  certs:
+    plugin: dump
+    source: /etc/mono
+    organize:
+      certstore: etc/mono/certstore
 
   wrapper:
     plugin: dump
