Test last bugfix with newer mono

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -11,7 +11,7 @@ jobs:
       run: |
         sudo apt install -y fsharp
         git submodule update --init
-        ./downgradeMono.fsx
+        #./downgradeMono.fsx
 
         sudo apt install -y snapd
         sudo snap install --classic snapcraft
