Setup proper hooks for Mono TLS cert store
This is the key to understand this problem:
https://github.com/mono/mono/blob/mono-4.6.2.7/mcs/class/Mono.Security/Mono.Security.X509/X509StoreManager.cs#L72

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,6 +11,10 @@ description: |
 grade: devel # must be 'stable' to release into candidate/stable channels
 confinement: strict
 
+layout:
+  /usr/share/.mono:
+    symlink: $SNAP/etc/mono/certstore
+
 apps:
   hello:
     command: sh $SNAP/usr/bin/mono-wrapper $SNAP/usr/bin/mono $SNAP/usr/lib/hello/hello-world.exe
@@ -27,6 +31,12 @@ parts:
       - cli-common-dev
       - mono-devel
     plugin: make
+
+  certs:
+    plugin: dump
+    source: /etc/mono
+    organize:
+      certstore: etc/mono/certstore
 
   wrapper:
     plugin: dump
