CI: print versions of snap & snapcraft

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -10,6 +10,10 @@ jobs:
     - name: Build and test snap
       run: |
         sudo apt install -y snapd snapcraft
+
+        snap --version
+        snapcraft --version
+
         snapcraft
         sudo snap install --dangerous hello_0.1_amd64.snap
         mono stage/usr/lib/hello/hello-world.exe
