--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -9,7 +9,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build and test snap
       run: |
-        sudo apt install -y snapd snapcraft
+        sudo apt install -y snapd
+        sudo snap install --classic snapcraft
 
         snap --version
         snapcraft --version
