--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -12,6 +12,9 @@ jobs:
         sudo apt install -y snapd
         sudo snap install --classic snapcraft
 
+        # workaround for latest version of snapcraft to work on GithubActions/AzureDevOps
+        sudo chown root:root /
+
         snap --version
         snapcraft --version
 
