Apply 2nd workaround to run latest version of snapcraft
Otherwise you get (either in AzureDevOps/GithubActions or a VM):

"You need 'multipass' set-up to build snaps: https://multipass.run."

See https://stackoverflow.com/a/59421701/544947

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -18,7 +18,8 @@ jobs:
         snap --version
         snapcraft --version
 
-        snapcraft
+        snapcraft --destructive-mode
+
         sudo snap install --dangerous hello_0.1_amd64.snap
         mono stage/usr/lib/hello/hello-world.exe
         snap run hello
