--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: hello # you probably want to 'snapcraft register <name>'
+name: monocurl # you probably want to 'snapcraft register <name>'
 base: core18
 version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Single-line elevator pitch for your amazing snap # 79 char long summary
@@ -16,12 +16,12 @@ layout:
     symlink: $SNAP/etc/mono/certstore
 
 apps:
-  hello:
-    command: sh $SNAP/usr/bin/mono-wrapper $SNAP/usr/bin/mono $SNAP/usr/lib/hello/hello-world.exe
+  monocurl:
+    command: sh $SNAP/usr/bin/mono-wrapper $SNAP/usr/bin/mono $SNAP/usr/lib/monocurl/monocurl.exe
     plugs: [network]
 
 parts:
-  hello:
+  monocurl:
     stage-packages:
       - libmono-system4.0-cil
       - mono-runtime
