--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -17,6 +17,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: HTTP_SNAP
       run: |
+        ./install_snapcraft.sh
         ./build_snap.sh
         ./run_snap.sh http://httpvshttps.com/
 
@@ -34,6 +35,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: oldHTTPS_SNAP
       run: |
+        ./install_snapcraft.sh
         ./build_snap.sh
         ./run_snap.sh https://raw.githubusercontent.com/knocte/geewallet/master/LICENCE.txt
 
@@ -51,5 +53,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: newHTTPS_SNAP
       run: |
+        ./install_snapcraft.sh
         ./build_snap.sh
         ./run_snap.sh https://httpvshttps.com/
