--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,13 @@ stockmono:
   image: ubuntu:18.04
   stage: build_and_test
   script:
-    -  apt install -y sudo
-    - ./install_snapcraft.sh
+    - ./install_snapcraft_dockerless.sh
+    # these exports below are needed to finish installation of dockerless snapcraft
+    - export SNAP=/snap/snapcraft/current
+    - export SNAP_NAME=snapcraft
+    - export SNAP_ARCH=amd64
+    - export PATH="/snap/bin:$PATH"
+
     - ./build_snap.sh
 
   artifacts:
