GitLabCI: pre-install mono-runtime-common
Otherwise we might get the error:
+ snapcraft --destructive-mode
817 Locale not set! Snapcraft will temporarily use C.UTF-8
818 Failed to pull source: unable to determine source type of '/etc/mono'.
819 Check that the URL is correct or consider specifying `source-type` for this part. See `snapcraft help sources` for more information.
820 ERROR: Job failed: exit code 1

So I found this package with `apt-file search /etc/mono`

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 before_script:
   - apt update
+  - DEBIAN_FRONTEND=noninteractive apt install -y mono-runtime-common
 
 stages:
   - build_and_test
